# othello-rust

./: .editorconfig  ABOUT-GAME.md  Cargo.toml  DESIGN.md  GUI_README.md  LICENSE.md  MCTS_DESIGN.md  MCTS_IMPLEMENTATION.md  MCTS_PARALLEL_IMPLEMENTATION.md  MINIMAX_IMPLEMENTATION.md  MINIMAX_PARALLEL_IMPLEMENTATION.md  PLAYER_SELECTION_IMPLEMENTATION.md  README.md
benches/: mcts_bench.rs
src/: ai_player.rs  board.rs  console_selection.rs  display.rs  error.rs  game.rs  graphics.rs  gui_selection.rs  human_player.rs  lib.rs  main.rs  main_gui.rs  player.rs  player_selection.rs  rules.rs
src/mcts/: heuristics.rs  mod.rs  node.rs  player.rs
src/minimax/: evaluator.rs  mod.rs  player.rs
tests/: mcts_integration_test.rs
