[package]
name = "othello"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "othello"
path = "src/main.rs"

[[bin]]
name = "othello-gui"
path = "src/main_gui.rs"
required-features = ["gui"]

[dependencies]
rand = "0.8"
atty = "0.2"
lazy_static = "1.4"
# GUI dependencies (requires Rust 1.81+)
# If you have Rust 1.80, you can comment out these and use the console version only
ggez = { version = "0.8", optional = true }
keyframe = { version = "1.0", optional = true }
mint = { version = "0.5", optional = true }

[features]
default = []
gui = ["ggez", "keyframe", "mint"]

