[package]
name = "othello"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "othello"
path = "src/main_gui.rs"
required-features = ["gui"]

[[bin]]
name = "othello-console"
path = "src/main.rs"

[dependencies]
rand = "0.8"
atty = "0.2"
lazy_static = "1.4"
# GUI dependencies (requires Rust 1.81+)
# GUI is enabled by default. To disable it, use: cargo run --no-default-features --bin othello-console
ggez = { version = "0.10.0-rc0", optional = true }
keyframe = { version = "1.0", optional = true }
mint = { version = "0.5", optional = true }

[features]
default = ["gui"]
gui = ["ggez", "keyframe", "mint"]

